@@ -30,13 +30,13 @@ import junit.framework.TestCase;
 
 import org.junit.BeforeClass;
 import org.junit.Test;
-import org.treetank.api.IConstants;
 import org.treetank.api.IReadTransaction;
 import org.treetank.api.ISession;
 import org.treetank.api.IWriteTransaction;
 import org.treetank.axislayer.DescendantAxis;
 import org.treetank.sessionlayer.Session;
 import org.treetank.sessionlayer.SessionConfiguration;
+import org.treetank.utils.IConstants;
 import org.treetank.utils.TestDocument;
 
 public class XMLShredderTest {
